--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarto en pruebas</title>
+    <title>Tarot en pruebas</title>
+    <style>
+        body{
+            background-color: aqua;
+        }
+        .carta{
+           height: 600px;
+           width: 350px;
+           border: 2px solid black;
+           border-radius: 20px;
+           padding: 15px;
+           background-color: white;
+           box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.2);
+        }
+        .dibu{
+            height: 570;
+            width: 320;
+        }
+    </style>
 </head>
 <body>
-    <img src="moon.svg" height="200px" alt="">
+    <div class="carta">
+        <img src="img/c01.jpg" class="dibu" alt="">
+    </div>
+    
 </body>
 <script src="tarot.js"></script>
 </html>
