--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>Tarot en pruebas</title>
 
     <link rel="stylesheet" href="css/tarot.css">
-    <link rel="stylesheet" href="css/index.css">    
+    
 </head>
 <body id="body">
-   <div id="tapete" ondrop="soltar(event)" ondragover="allowDrop(event)"></div>
+    <div class="estrella"></div>
+    <div id="tapete">
+        <div id="zonaMazo"></div>
+        <div class="augurio" id="si_no"></div>
+        <div class="lectura"></div>
+    </div> 
 </body>
 
 <script src="tarot.js"></script>
