probatines de estilos

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     
 </head>
 <body id="body">
+    <h1>¿Sí o No?</h1>
+    <h2>Concéntrate en tu consulta durante unos segundos y saca una carta</h2>
     <div class="estrella"></div>
     <div id="tapete">
         <div id="zonaMazo"></div>
