--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <body id="body">
     <h1>¿Sí o No?</h1>
     <h2>Concéntrate en tu consulta durante unos segundos y saca una carta</h2>
-    <div class="estrella"></div>
     <div id="tapete">
         <div id="zonaMazo"></div>
-        <div class="augurio" id="si_no"></div>
-        <div class="lectura"></div>
+        <div class="augurio" id="si_no">
+            <div class="lectura"></div> 
+        </div> 
+             
     </div> 
+    
 </body>
 
 <script src="tarot.js"></script>
